--- a/src/app/aircondetails/aircondetails.component.html
+++ b/src/app/aircondetails/aircondetails.component.html
@@ -53,6 +53,9 @@
           <form [formGroup]="unitdetailsForm" (ngSubmit)="unitdetailsSubmit()">
             <ng-template matStepLabel>Unit Details</ng-template>
             <!--Service Location-->
+            <mat-card class="viewprice">
+              
+            </mat-card>
             <mat-card class="unitdetailscard">
               <div>
                 <h1 class="unitdetails">Unit Details</h1>
