--- a/src/app/profileform/profileform.component.html
+++ b/src/app/profileform/profileform.component.html
@@ -71,7 +71,7 @@
 
         <div>
           <mat-icon class="pass_icon">lock</mat-icon>
-          <label class="pass">09676428307</label>
+          <label class="pass"><a href="/change_password">Change password?</a></label>
         </div>
       
       
