--- a/src/app/change-password/change-password.component.css
+++ b/src/app/change-password/change-password.component.css
@@ -113,7 +113,6 @@
 .logoutside:hover
 {
     background-color: #c8c19c;
-    
     width: 100%;
     height: 70px;
     margin-left: 0;
@@ -130,6 +129,13 @@
 }
 .spacer{
   flex: 1 1 auto;
+}
+.ayosgamit
+{
+  font-family: 'Candara';
+  font-size: 30px;
+  margin-left: 10px;
+  color: #FFFFFF;
 }
 .ayosgamit
 {
@@ -169,9 +175,9 @@
 .saveBtn{
   width: 140px;
   height: 40px;
-  margin-top: 10px;
   font-size: 16px;
-  float: right;
+  margin: auto;
+  margin-bottom: 10px;
   color: #14213D;
   background-color: #FCA311;
 }
