--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -53,20 +53,22 @@
                 <p>
                     <mat-form-field class="textfields" appearance="outline">
                         <mat-label>Current Password</mat-label>
-                        <input matInput placeholder="Enter current password"
-                          [type]="hide ? 'password' : 'text'" autocomplete="off">
-                      </mat-form-field>
+                        <input matInput placeholder="Enter current password" [type]="hide ? 'password' : 'text'"
+                            autocomplete="off">
+                    </mat-form-field>
                 </p>
                 <p>
                     <mat-form-field class="textfields" appearance="outline">
                         <mat-label>New Password</mat-label>
-                        <input matInput placeholder="Enter current password"
-                          [type]="hide ? 'password' : 'text'" autocomplete="off">
-                        <mat-icon mat-icon-button matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}} </mat-icon>
-                      </mat-form-field>
+                        <input matInput placeholder="Enter new password" [type]="hide ? 'password' : 'text'"
+                            autocomplete="off">
+                        <mat-icon mat-icon-button matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' :
+                            'visibility'}} </mat-icon>
+                    </mat-form-field>
                 </p>
+                <button class="saveBtn" mat-raised-button> Save Changes </button>
             </div>
-            <button class="saveBtn" mat-raised-button> Save Changes </button>
+
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
