updated id length and login in toolbar

--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -16,55 +16,62 @@
   }
 
   .ayosgamit
-{
-  font-family: 'Candara';
-  font-size: 30px;
-  position: center;
-  color: #FFFFFF;
-}
-
-
-.pricingBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  {
+    font-family: 'Candara';
+    font-size: 30px;
+    position: center;
     color: #FFFFFF;
-    font-size: 17px;
-    float: left;
-    margin-left: 100px;
-    margin-top: 80px;
-    margin-top: 0;
-    
-}
-
-.contactUsBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
-    font-size: 17px;
-    float: left;
-    margin-left: 100px;
-    margin-top: 0;
-}
-
-.aboutusBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
-    font-size: 17px;
-    float: left;
-    margin-left: 100px;
-    margin-top: 0;
-}
-
-.menuBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
-    font-size: 17px;
-    float: left;
-    margin-left: 100px;
-    margin-top: 0;
-}
+  }
+  
+  
+  .pricingBtn
+  {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #FFFFFF;
+      font-size: 17px;
+      float: left;
+      margin-left: 100px;
+      margin-top: 80px;
+      margin-top: 0;
+      
+  }
+  
+  .contactUsBtn
+  {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #FFFFFF;
+      font-size: 17px;
+      float: left;
+      margin-left: 100px;
+      margin-top: 0;
+  }
+  
+  .aboutusBtn
+  {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #FFFFFF;
+      font-size: 17px;
+      float: left;
+      margin-left: 100px;
+      margin-top: 0;
+  }
+  .menuBtn
+  {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #FFFFFF;
+      font-size: 17px;
+      float: left;
+      margin-left: 100px;
+      margin-top: 0;
+  }
+  .spacer{
+      flex: 1 1 auto;
+    }
+    .navLogin{
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #FFFFFF;
+      font-size: 17px;
+    }
 .mat-card
 {
     width: 1000px;
@@ -185,6 +192,7 @@
     margin-top: 0;
     display: none;
 }
+
 .mat-card
 {
     width: 90%;
