--- a/src/app/bookingsummary/bookingsummary.component.html
+++ b/src/app/bookingsummary/bookingsummary.component.html
@@ -109,7 +109,7 @@
 
         </div>
         <div>
-          <button mat-raised-button class="payBtn">Pay with Cash</button>
+          <button mat-raised-button class="payBtn" routerLink='/dashboard'>Pay with Cash</button>
           <h1 class="ortxt">OR</h1>
           <div class="paypalBtn" id="myPaypalButtons"></div>
         </div>
