--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -48,27 +48,45 @@
             <span class="spacer"></span>
         </mat-toolbar>
         <div class="container">
-            <div class="card">
-                <h1 class="infoLbl">Change Password</h1>
-                <p>
-                    <mat-form-field class="textfields" appearance="outline">
-                        <mat-label>Current Password</mat-label>
-                        <input matInput placeholder="Enter current password" [type]="hide ? 'password' : 'text'"
-                            autocomplete="off">
-                    </mat-form-field>
-                </p>
-                <p>
-                    <mat-form-field class="textfields" appearance="outline">
-                        <mat-label>New Password</mat-label>
-                        <input matInput placeholder="Enter new password" [type]="hide ? 'password' : 'text'"
-                            autocomplete="off">
-                        <mat-icon mat-icon-button matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' :
-                            'visibility'}} </mat-icon>
-                    </mat-form-field>
-                </p>
-                <button class="saveBtn" mat-raised-button> Save Changes </button>
-            </div>
-
+            <form [formGroup]="changePassForm" (ngSubmit)="changePassSubmit()">
+                <div class="card">
+                    <h1 class="infoLbl">Change Password</h1>
+                    <p>
+                        <mat-form-field class="textfields" appearance="outline">
+                            <mat-label>Current Password</mat-label>
+                            <input matInput formControlName="currentPassword" [errorStateMatcher]="matcher"
+                                placeholder="Enter current password" [type]="hide ? 'password' : 'text'"
+                                autocomplete="off">
+                            <mat-error *ngIf="changePassForm.get('currentPassword').hasError('required')">Current Password is
+                                required</mat-error>
+                            <mat-error *ngIf="changePassForm.get('currentPassword').hasError('minlength')">Password must
+                                have at least
+                                {{minPw}} characters</mat-error>
+                            <mat-error *ngIf="changePassForm.get('currentPassword').hasError('maxlength')">Password
+                                contains maximum of
+                                {{maxPw}} characters</mat-error>
+                        </mat-form-field>
+                    </p>
+                    <p>
+                        <mat-form-field class="textfields" appearance="outline">
+                            <mat-label>New Password</mat-label>
+                            <input matInput formControlName="newPassword" [errorStateMatcher]="matcher"
+                                placeholder="Enter new password" [type]="hide ? 'password' : 'text'" autocomplete="off">
+                            <mat-icon mat-icon-button matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' :
+                                'visibility'}} </mat-icon>
+                            <mat-error *ngIf="changePassForm.get('newPassword').hasError('required')">New Password is
+                                required</mat-error>
+                            <mat-error *ngIf="changePassForm.get('newPassword').hasError('minlength')">Password must
+                                have at least
+                                {{minPw}} characters</mat-error>
+                            <mat-error *ngIf="changePassForm.get('newPassword').hasError('maxlength')">Password contains
+                                maximum of
+                                {{maxPw}} characters</mat-error>
+                        </mat-form-field>
+                    </p>
+                    <button class="saveBtn" type="submit" mat-raised-button> Save Changes </button>
+                </div>
+            </form>
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
