--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -18,6 +18,11 @@
             <button mat-button class="contactUsBtn" routerLink="/contact_us">Contact Us</button>
             <button mat-button class="aboutusBtn" routerLink="/about_us">About Us</button>
         </div>
+        <span class="spacer"></span>
+        <div>
+            <button mat-button class="navLogin" routerLink="/login">Sign In</button>
+            <button mat-button class="navLogin" routerLink="/login">Sign Up</button>
+        </div>
     </mat-toolbar>
 
     <div>
