--- a/src/app/adminpage/adminpage.component.css
+++ b/src/app/adminpage/adminpage.component.css
@@ -180,7 +180,6 @@ color: #FFFFFF;
  {
     width: fit-content;
     margin-top: 100px;
-    margin-left: 50px;
  }
 
  .searchfield
@@ -194,7 +193,6 @@ color: #FFFFFF;
  
  .newreq
  {
-   margin-left: 20px;
    margin-top: 15px;
    width: fit-content;
    height: 400px;
@@ -210,7 +208,6 @@ color: #FFFFFF;
 
  .pendingreq
  {
-   margin-left: 15px;
    margin-top: 15px;
    width: fit-content;
    height: 400px;
@@ -226,7 +223,6 @@ color: #FFFFFF;
 
  .completedreq
 {
-  margin-left: 20px;
   margin-top: 15px;
   width: 1290fit-contentpx;
   height: 400px;
@@ -242,7 +238,6 @@ color: #FFFFFF;
 
 .cancelledreq
 {
-  margin-left: 20px;
   margin-top: 15px;
   width: fit-content;
   height: 400px;
@@ -268,14 +263,22 @@ color: #FFFFFF;
   margin-top: 50px;
 }
 table{
-  width: 1000px;
+  width: 1100px;
 }
 .header, td{
   text-align: center;
 }
+.acceptBtn{
+  background-color: #0d9130;
+  margin: 5px;
+}
+.rejectBtn{
+  background-color: #D62828;
+  margin: 5px;
+}
 .detailsBtn{
-  margin-top: 5px;
-  margin-left: 20px;
+  background-color: #FCA311;
+  margin: 5px;
 }
 .container{
   width: auto;
