--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
- <!--<router-outlet></router-outlet>-->
-<app-washingmachine-install></app-washingmachine-install>
+ <router-outlet></router-outlet>
+
 
 
