--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -64,6 +64,14 @@
     margin-left: 100px;
     margin-top: 0;
 }
+.spacer{
+    flex: 1 1 auto;
+  }
+  .navLogin{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #FFFFFF;
+    font-size: 17px;
+  }
 .mat-card
 {
     width: 1000px;
@@ -232,6 +240,14 @@ p{
     margin-top: 0;
     display: none;
 }
+    .spacer{
+        flex: 1 1 auto;
+      }
+      .navLogin{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #FFFFFF;
+        font-size: 17px;
+      }
 .mat-card
 {
     width: 90%;
