--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,10 +1,9 @@
 <body>
     <mat-toolbar>
         <h1 class="ayosgamit" routerLink="/home">Ayosgamit</h1>
-
         <div>
             <button mat-button class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon>
-                </button>
+            </button>
             <mat-menu #menu="matMenu">
                 <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
                 <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
@@ -17,6 +16,11 @@
             <button mat-button class="pricingBtn" routerLink="/pricing">Pricing</button>
             <button mat-button class="contactUsBtn" routerLink="/contact_us">Contact Us</button>
             <button mat-button class="aboutusBtn" routerLink="/about_us">About Us</button>
+        </div>
+        <span class="spacer"></span>
+        <div>
+            <button mat-button class="navLogin" routerLink="/login">Sign In</button>
+            <button mat-button class="navLogin" routerLink="/login">Sign Up</button>
         </div>
     </mat-toolbar>
 
