--- a/src/app/menu-aircon/menu-aircon.component.css
+++ b/src/app/menu-aircon/menu-aircon.component.css
@@ -63,6 +63,14 @@
     margin-left: 100px;
     margin-top: 0;
 }
+.spacer{
+    flex: 1 1 auto;
+  }
+  .navLogin{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #FFFFFF;
+    font-size: 17px;
+  }
 
 .mat-card
 {
