--- a/src/app/menu-tv/menu-tv.component.html
+++ b/src/app/menu-tv/menu-tv.component.html
@@ -17,6 +17,11 @@
             <button mat-button class="contactUsBtn1" routerLink="/contact_us">Contact Us</button>
             <button mat-button class="aboutusBtn1" routerLink="/about_us">About Us</button>
         </div>
+        <span class="spacer"></span>
+        <div>
+            <button mat-button class="navLogin" routerLink="/login">Sign In</button>
+            <button mat-button class="navLogin" routerLink="/login">Sign Up</button>
+        </div>
     </mat-toolbar>
     <div>
         <mat-card>
