--- a/src/app/reschedule/reschedule.component.css
+++ b/src/app/reschedule/reschedule.component.css
@@ -86,22 +86,7 @@ p
   
 .tech1Btn
   {
-  margin-top: -100px;
-  }
-  
-  .tech2Btn
-  {
-  margin-top: 10px;
-  }
-  
-  .tech3Btn
-  {
-  margin-top: 10px;
-  }
-  
-  .tech4Btn
-  {
-  margin-top: 10px;
+  margin-top: -110px;
   }
   
   .h1technicians
@@ -216,6 +201,9 @@ p
         margin-left: 20px;
         margin-top: 70px;
     }
+    .time{
+      color: black;
+    }
     
     
     .mat-stroked-button
@@ -231,20 +219,6 @@ p
       margin-top: -100px;
       }
       
-      .tech2Btn
-      {
-      margin-top: 10px;
-      }
-      
-      .tech3Btn
-      {
-      margin-top: 10px;
-      }
-      
-      .tech4Btn
-      {
-      margin-top: 10px;
-      }
       
       .h1technicians
       {
