--- a/src/app/reschedule/reschedule.component.html
+++ b/src/app/reschedule/reschedule.component.html
@@ -1,15 +1,10 @@
 <mat-toolbar>
-  <h1 class="ayosgamit" routerLink="/home" >Ayosgamit</h1>
- </mat-toolbar>
-
-
-
+  <h1 class="ayosgamit" routerLink="/home">Ayosgamit</h1>
+</mat-toolbar>
 
 <mat-card>
   
-  
- 
-
+  <form [formGroup]="scheduleForm" (ngSubmit)="schedSubmit()">
   <div>
     <h1 class="resched">Reschedule Service</h1>
   </div>
@@ -20,41 +15,44 @@
 
   <div>
     <mat-form-field class="datepicker" appearance="outline">
-            <mat-label>Date of Service</mat-label>
-      <input matInput [matDatepicker]="picker">
+      <mat-label>Date of Service</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName="service_date" autocomplete="off">
       <mat-datepicker #picker></mat-datepicker>
+      <mat-error *ngIf="scheduleForm.get('service_date').hasError('required')">
+        You must make a selection
+      </mat-error>
     </mat-form-field>
 
-    <button mat-stroked-button class="dateBtn" (click)="picker.open()"><mat-icon>calendar_today</mat-icon></button>
-  </div>  
- 
-  
-  <!--Time Slots--> 
+    <button mat-stroked-button class="dateBtn" (click)="picker.open()">
+      <mat-icon>calendar_today</mat-icon>
+    </button>
+  </div>
+
+  <!--Time Slots-->
   <p class="timeslot">Select a time slot</p>
-  
+
   <div class="timeslots">
-  <button mat-stroked-button class="tech1Btn">7:00am-10:00am<h1 class="h1technicians">
-    </h1>
-  </button>
-
-  <button mat-stroked-button class="tech1Btn">10:00am - 1:00pm<h1 class="h1technicians">
-  </h1>
-  </button>
-  <button mat-stroked-button class="tech1Btn">1:00pm - 3:00pm<h1 class="h1technicians">
-  </h1>
-</button>
-
-<button mat-stroked-button class="tech1Btn">3:00pm - 6:00pm<h1 class="h1technicians">
-</h1>
-</button>
-
-
+    <button mat-stroked-button class="tech1Btn" value="7:00am - 10:00am"disabled>
+      <input type="radio" value="7:00am - 10:00am" formControlName="service_timeslot"
+        required> &nbsp; 7:00am-10:00am
+    </button>
+    <button mat-stroked-button class="tech1Btn" value="10:00am-1:00pm" disabled>
+      <input type="radio" value="10:00am - 1:00pm" formControlName="service_timeslot"
+        required> &nbsp; 10:00am-1:00pm
+    </button>
+    <button mat-stroked-button class="tech1Btn" value="1:00pm-3:00pm"disabled>
+      <input type="radio" value="1:00pm - 3:00pm" formControlName="service_timeslot"
+        required> &nbsp; 1:00pm-3:00pm
+    </button>
+    <button mat-stroked-button class="tech1Btn" value="3:00pm-6:00pm"disabled>
+      <input type="radio" value="3:00pm - 6:00pm" formControlName="service_timeslot"
+        required> &nbsp; 3:00pm-6:00pm
+    </button>
   </div>
 
   <div>
-
-    <button mat-raised-button class="reschedBtn">Reschedule Request</button>
-    <button mat-raised-button class="cancelBtn">Cancel Request</button>
+    <button mat-raised-button class="reschedBtn" type="submit" [disabled]="!scheduleForm.valid">Reschedule Request</button>
+    <button mat-raised-button class="cancelBtn" (click)="getConfirmation()">Cancel Request</button>
   </div>
-
+</form>
 </mat-card>
