updated cannot access client side if not login

--- a/src/app/paymentform/paymentform.component.html
+++ b/src/app/paymentform/paymentform.component.html
@@ -25,9 +25,7 @@
   <div>
     <h1 class="paymentinfotxt">Payment Summary</h1>
   </div>
-
-
-    <table class="table" *ngFor="let sr of service_request">
+    <!-- <table class="table" *ngFor="let sr of service_request">
       <thead>
         <tr>
           <th>Appliance</th>
@@ -45,7 +43,7 @@
           <td>{{sr.service_unitType}}</td>
         </tr>
       </tbody>
-</table>
+</table> -->
 
 <div>
   <button mat-raised-button class="payBtn" routerLink="/paymentsuccess">Pay with Cash</button>
