--- a/src/app/profileform/profileform.component.html
+++ b/src/app/profileform/profileform.component.html
@@ -32,7 +32,7 @@
       <div class="logoutside">
         <mat-list-item (click)="closeSideNav()">
           <mat-icon class="nav-icon">exit_to_app</mat-icon>
-          <a class="logout-btn" routerLink="/home">Logout</a>
+          <a class="logout-btn" (click)="logout()">Logout</a>
         </mat-list-item>
       </div>
     </mat-nav-list>
@@ -57,24 +57,22 @@
           <button class="editbtn" mat-raised-button routerLink="/edit_profile">Edit</button>
         </div>
         <div>
-          <h1 class="personalinfoLbl">Full Name</h1>
+          <h1 class="personalinfoLbl">{{fname}} {{lname}}</h1>
         </div>
         <div>
           <mat-icon class="mail_icon">mail</mat-icon>
-          <label class="mail">email@yahoo.com</label>
+          <label class="mail">{{email}}</label>
         </div>
 
         <div>
           <mat-icon class="contact_icon">call</mat-icon>
-          <label class="contact">09676428307</label>
+          <label class="contact">{{number}}</label>
         </div>
 
         <div>
           <mat-icon class="pass_icon">lock</mat-icon>
           <label class="pass"><a href="/change_password">Change password?</a></label>
         </div>
-      
-      
       </mat-card>
 
       <mat-card class="addresscard">
@@ -89,15 +87,15 @@
           <div class="row">
             <div class="col-12">
               <p class="paper-label">Service Address</p>
-              <p class="mt-2">DATA</p>
+              <p class="mt-2">{{address}}</p>
             </div>
             <div class="col-12">
               <p class="paper-label">Service Address Details (Unit No., Block/Lot No., Bldg./Tower)</p>
-              <p class="mt-2">DATA</p>
+              <p class="mt-2">{{addressDetails}}</p>
             </div>
             <div class="col-12">
               <p class="paper-label">Property type</p>
-              <p class="mt-2">DATA</p>
+              <p class="mt-2">{{property_type}}</p>
             </div>
 
             <div class="col-12">
