--- a/src/app/televisiondetails/televisiondetails.component.html
+++ b/src/app/televisiondetails/televisiondetails.component.html
@@ -29,7 +29,7 @@
       <div class="logoutside">
         <mat-list-item (click)="closeSideNav()">
           <mat-icon class="nav-icon">exit_to_app</mat-icon>
-          <a class="logout-btn" routerLink="/home">Logout</a>
+          <a class="logout-btn" (click)="logout()">Logout</a>
         </mat-list-item>
       </div>
     </mat-nav-list>
