--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
-<<<<<<< HEAD
  <!--<router-outlet></router-outlet>-->
-<app-paymentsuccess></app-paymentsuccess>
-=======
- <router-outlet></router-outlet>
-
->>>>>>> 344083288bff76b824da79977fa26f27a6b2f557
+<app-bookingsummary></app-bookingsummary>
 
 
