--- a/src/app/bookingsummary/bookingsummary.component.css
+++ b/src/app/bookingsummary/bookingsummary.component.css
@@ -191,7 +191,7 @@ margin-left: 50px;
 {
   width: 750px;
   height: 700px;
-  margin-top: 20px !important;
+  margin-top: 50px !important;
   position: center !important;
   margin: auto;
   
@@ -442,10 +442,10 @@ margin-left: 50px;
   color: #FFFFFF;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
-  float: left;
-  margin: 5px;
-  margin-top: 40px;
-  margin-bottom: 10px;
+  float: right;
+  margin-right: 15px;
+  
+  
 }
 
 .cancelBtn
@@ -458,8 +458,9 @@ margin-left: 50px;
   font-size: 13px;
   float: right;
   margin: 5px;
-  margin-top: 40px;
-  margin-bottom: 10px;
+  margin-top: 1px;
+  
+;
 }
 .pending{
   width: 100%;
