--- a/src/app/bookingsummary/bookingsummary.component.html
+++ b/src/app/bookingsummary/bookingsummary.component.html
@@ -7,6 +7,10 @@
     <!--REQUEST SUMMARY------------------------------------------------>
     <div>
    
+     <div>
+      <button mat-raised-button (click)="getConfirmation()" class="cancelBtn">Cancel Request</button>
+      <button mat-raised-button class="reschedBtn" routerLink="/reschedule">Reschedule Request</button>
+     </div>
 
     <mat-card class="summary">
       <div>
